# OpenDMS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx
src/opendms/: __init__.py  audit.py  config.py  database.py  main.py  org_context.py
src/opendms/ai/: __init__.py
src/opendms/middleware/: auth.py
src/opendms/routers/: ai.py  ai_instructions.py  audit.py  auth.py  documents.py  intelligence.py  org_tools.py  structures.py  system.py  users.py
src/opendms/sdk_client/: __init__.py
src/opendms/storage/: __init__.py
tests/: test_documents_ai_flow.py
